--- a/src/assets/scss/component/_selection.scss
+++ b/src/assets/scss/component/_selection.scss
@@ -1,9 +1,9 @@
-// 下拉式選單(票券詳情及後台使用)
+// 下拉式選單
 select#selection_main{
     color: $textColor_default;
     background-color: $textColor_white;
     border: 2px solid $textColor_default;
-    border-radius: 50px;
+    border-radius: 4px;
     letter-spacing: 0.6px;
     outline: none;
     @include sm_h5;
