--- a/src/assets/scss/component/_table.scss
+++ b/src/assets/scss/component/_table.scss
@@ -33,5 +33,8 @@
                 width: 40px;
             }
         }
+        button{
+            color: $textColor_default;
+        }
     }
 }
