--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,12 @@
 @import "base/reset";
-@import "baseAndMixin";
+
+//base
+@import "base/color";
+@import "base/font";
+@import "base/var";
+
+// mixin
+@import "mixin/all";
 
 // component
 @import "component/btn";
@@ -7,6 +14,33 @@
 @import "component/selection";
 @import "component/table";
 
+
+//預設格式
+#app {
+    @include xl_p;
+    font-family: $fontFamily;
+    color: $textColor_default;
+    background: $textColor_white;
+    h1 {
+        @include xl_h1;
+    }
+    h2 {
+        @include xl_h2;
+    }
+    h3 {
+        @include xl_h3;
+    }
+    h4 {
+        @include xl_h4;
+    }
+    h5 {
+        @include xl_h5;
+    }
+}
+
+
+
+//頁面主區塊
 .main_content{
     width: 900px;
     padding: $sp4 $sp15 $sp7 $sp7;
@@ -14,6 +48,7 @@
     h3{
         padding-bottom: $sp5;
     }
+    //主頁表格上方區塊(含搜尋欄、新增按鈕)
     .action_container{
         display: flex;
         justify-content: space-between;
@@ -23,6 +58,7 @@
             gap: $sp1;
         }
     }
+    //表單欄位
     .form_container{
         display: flex;
         flex-direction: column;
@@ -39,6 +75,7 @@
             }
         }
     }
+    //下拉選單
     .selection_box{
         span{
             @include xl_p;
@@ -53,6 +90,7 @@
             width: 20%;
         }
     }
+    //取消、儲存鈕
     .btn_wrap{
         display: flex;
         align-items: center;
@@ -61,11 +99,18 @@
         padding: $sp4 0;
     }
 
-    //修改套件樣式
+
+    //-----------修改套件樣式------------
     //icon
     .ivu-icon{
         margin-left: -4px;
         font-size: 24px;
+    }
+    .action_container button .ivu-icon{
+        color: $textColor_white;
+    }
+    table button .ivu-icon{
+        color: $textColor_default;
     }
     //狀態開關
     .ivu-switch{
@@ -122,7 +167,9 @@
         padding: 0 !important;
     }
 
-    //上傳多張照片預覽及刪除(套件預設樣式)
+
+    //-----------套件預設樣式------------
+    //上傳多張照片預覽及刪除
     .demo-upload-list{
         display: inline-block;
         width: 200px;
