--- a/src/assets/scss/component/_table.scss
+++ b/src/assets/scss/component/_table.scss
@@ -33,8 +33,8 @@
                 width: 50px;
             }
         }
-        button{
-            color: $textColor_default;
+        icon{
+            color: #6a5d4a;
         }
     }
 }
