axios新增POST(但在景點頁還沒測成功), 景點相關頁調整

--- a/src/assets/scss/component/_table.scss
+++ b/src/assets/scss/component/_table.scss
@@ -33,6 +33,9 @@
                 width: 50px;
             }
         }
+        button{
+            color: $textColor_default;
+        }
         icon{
             color: #6a5d4a;
         }
