--- a/src/assets/scss/component/_form.scss
+++ b/src/assets/scss/component/_form.scss
@@ -1,6 +1,7 @@
 // 表單欄位
 input[type="text"],
 input[type="password"],
+input[type="number"],
 input[type="tel"],
 input[type="email"] {
     color: $textColor_default;
@@ -11,17 +12,21 @@ input[type="email"] {
     padding: $sp1 $sp2;
     letter-spacing: 0.6px;
     @include sm_p;
+
     @media (min-width: 768px) {
         @include xl_p;
     }
+
     &::placeholder {
         color: $textColor_tint;
         transform: translateY(1px);
     }
+
     &:focus {
         box-shadow: 0px 0px 5px 2px rgba(106, 93, 74, 0.25) inset;
     }
 }
+
 textarea {
     resize: none;
     color: $textColor_default;
@@ -33,13 +38,16 @@ textarea {
     @include sm_p;
     line-height: 1.3;
     text-align: justify;
+
     @media (min-width: 768px) {
         @include xl_p;
     }
+
     &::placeholder {
         color: $textColor_tint;
         transform: translateY(1px);
     }
+
     &:focus {
         box-shadow: 0px 0px 5px 2px rgba(106, 93, 74, 0.25) inset;
     }
@@ -49,14 +57,17 @@ textarea {
 input[type="text"].form_warning,
 input[type="password"].form_warning {
     border-color: $warningColor;
+
     &:focus {
         border-color: $textColor_default;
     }
 }
-.form_warning + span {
+
+.form_warning+span {
     color: $warningColor;
     padding: $sp1 $sp2;
     @include sm_p;
+
     @media (min-width: 768px) {
         @include xl_p;
     }
