--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -204,14 +204,14 @@
         justify-content: center;
 
         .feedback_wrap {
+            width: 80%;
             max-width: 1000px;
             background-color: $textColor_white;
             padding: $sp6;
             margin: $sp10;
             display: flex;
             flex-direction: column;
-            align-items: center;
-
+            align-items: flex-start;
             .row {
                 display: flex;
                 gap: $sp2;
@@ -227,6 +227,9 @@
                 p {
                     line-height: 1.5;
                 }
+            }
+            button.btn{
+                margin: auto;
             }
         }
     }
